@@ -16,7 +16,6 @@ import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
 import java.util.HashMap;
 import java.util.Locale;
@@ -34,7 +33,7 @@ public class ResultWriter {
     private boolean anyWriteErrorLogged = false;
 
     public ResultWriter(String resultsPath) {
-        this.resultsDir = Paths.get(resultsPath);
+        this.resultsDir = Path.of(resultsPath);
     }
 
     /**
